services/ni/website/03-ingress-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website-https
  namespace: ni-website
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`niaefeup.pt`)
      kind: Rule
      services:
        - name: website-ni-service
          port: 80
  tls:
    secretName: website-own-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website-old-https
  namespace: ni-website
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ni.fe.up.pt`)
      kind: Rule
      services:
        - name: website-ni-service
          port: 80
  tls:
    secretName: website-cert
