services/ni/website/06-ingress-routes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-old-domain
  namespace: ni-website
spec:
  redirectRegex:
    regex: "^https://ni\\.fe\\.up\\.pt/(.*)"
    replacement: "https://niaefeup.pt/${1}"
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website-https
  namespace: ni-website
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`niaefeup.pt`)
      kind: Rule
      services:
        - name: ni-website-app
          port: 80
  tls:
    secretName: website-own-cert
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: website-old-https
  namespace: ni-website
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ni.fe.up.pt`)
      kind: Rule
      services:
        - name: ni-website-app
          port: 80
      middlewares:
        - name: redirect-old-domain
  tls:
    secretName: website-cert
